add: custom input radios

--- a/productLandingPage/styles/classes/_checkbox.sass
+++ b/productLandingPage/styles/classes/_checkbox.sass
@@ -19,7 +19,7 @@
         left: 0
         display: none
 
-.custom_checkbox
+.custom-checkbox
     border-radius: 1em
     width: 4em
     height: 2em
@@ -42,7 +42,7 @@
         right: 0
         left: auto
 
-.custom_checkbox
+.custom-checkbox
     label span
         @extend %min-it
     label i
