--- a/productLandingPage/styles/challenge/_radios.sass
+++ b/productLandingPage/styles/challenge/_radios.sass
@@ -1,16 +1,3 @@
-%max-it
-    width: 100%
-    height: 100%
-
-%min-it
-    width: 1px
-    height: 1px  
-
-%super-absolute
-    position: absolute
-    top: 0
-    left: 0
-
 .custom-radio
     @extend %centralize-all
     position: relative
@@ -19,18 +6,24 @@
     border-radius: 1em
     overflow: hidden
     *
-        cursor: pointer
+        transition: all .5s ease!important
+        @extend %cursor-pointer
+    &:hover, &:focus
+        .switch
+            transform: translateY(100%)
+            background: red
     input
         @extend %max-it
         opacity: 0
-        background: red!important
         position: absolute
         z-index: 2
     label
         z-index: 1
+        font-size: 1.2em
     .switch
         @extend %max-it
         @extend %super-absolute
         z-index: 0
+        transform: translateY(-100%)
     input:checked + .switch
-        background: red!important
+        transform: translateY(0)
