--- a/productLandingPage/styles/classes/_checkbox.sass
+++ b/productLandingPage/styles/classes/_checkbox.sass
@@ -26,7 +26,7 @@
     position: relative
     font-size: 1.2em
     & *
-        cursor: pointer
+        @extend %cursor-pointer
         transition: background 0.5s linear, color 0.5s linear!important
     label span, input
         opacity: 0
