fix: tab navigation in header menus

--- a/productLandingPage/styles/challenge/_header.sass
+++ b/productLandingPage/styles/challenge/_header.sass
@@ -6,8 +6,8 @@ $header-height: 4em
     width: 100%
     display: flex
     flex-flow: row wrap
-    justify-content: center
-    align-items: flex-start
+    justify-content: space-between
+    align-items: center
     padding: 0 1em
     & > *
         position: relative
@@ -15,37 +15,13 @@ $header-height: 4em
     *
         outline: none
 
-*[class^=header-item]
-    height: inherit
-    display: flex
-    flex-flow: row wrap
-    justify-content: center
-    align-items: center
-    flex: 0 1 (100% / 3)
-
-.header-item-nav
-    justify-content: flex-start
-
-.header-item-options
-    justify-content: flex-end
-
-#header
-    &.activated .header-item-logo
-        transform: translateY(-100%)
-
-    &.activated .header-item-close
-        transform: translateY(-100%)
-
 #nav, #options
     &.activated
         transform: translateX(0)
 
-.header-item-logo
-    transform: translateY(0)
-
-.header-item-close
-    transform: translateY(-200%)
-
+#options
+    &.activated
+        transform: translateX(100%)
 
 #logo
     max-width: $header-height
@@ -53,11 +29,11 @@ $header-height: 4em
 #nav
     transform: translateX(-100%)
 #options
-    transform: translateX(100%)
+    transform: translateX(200%)
 #nav, #options
     @extend %centralize-all
     min-height: 100vh
-    width: 100%
+    width: 50%
     z-index: 10
     background: inherit
     top: 0
