--- a/productLandingPage/styles/challenge/_header.sass
+++ b/productLandingPage/styles/challenge/_header.sass
@@ -15,7 +15,7 @@ $header-height: 4em
     *
         outline: none
 
-#nav, #options
+#nav-bar, #options
     &.activated
         transform: translateX(0)
 
@@ -26,11 +26,11 @@ $header-height: 4em
 #logo
     max-width: $header-height
 
-#nav
+#nav-bar
     transform: translateX(-100%)
 #options
     transform: translateX(200%)
-#nav, #options
+#nav-bar, #options
     @extend %centralize-all
     min-height: 100vh
     width: 50%
