--- a/productLandingPage/styles/challenge/_radios.sass
+++ b/productLandingPage/styles/challenge/_radios.sass
@@ -1,4 +1,4 @@
-#nav-controller ~ .switch
+#nav-bar-controller ~ .switch
     transform: translateX(-100%)
 #options-controller ~ .switch
     transform: translateX(100%)
@@ -29,6 +29,6 @@
         @extend %max-it
         @extend %super-absolute
         z-index: 0
-    input:checked + .switch
-        transform: translateX(0)!important
-        background: red
+    // input:checked + .switch
+    //     transform: translateX(0)!important
+    //     background: red
