--- a/productLandingPage/styles/challenge/_welcome.sass
+++ b/productLandingPage/styles/challenge/_welcome.sass
@@ -1,5 +1,15 @@
+@import 'welcome_menu'
+
 #main-welcome
     background-image: url('../../img/rosa (1).jpg')
+    overflow: hidden
+    width: 100%
+    position: relative
+    #circles-container
+        position: relative
+        overflow: hidden
+        min-height: 100vh
+        width: 100%
 
 .box 
     box-shadow: $box-shadow
