--- a/productLandingPage/styles/index/index.sass
+++ b/productLandingPage/styles/index/index.sass
@@ -10,7 +10,7 @@
 
 @import '../classes/placeholders'
 
-@import '../classes/text_align'
+@import '../classes/alignment'
 @import '../classes/responsive12grid'
 
 @import '../classes/animation'
@@ -18,7 +18,8 @@
 @import '../classes/icon'
 @import '../classes/pre'
 @import '../classes/checkbox'
-@import '../classes/form'
+// @import '../classes/form'
+@import '../classes/borders'
 
 @import url('https://fonts.googleapis.com/css?family=#{$google-font-link}:300,400,700')
 @import '../classes/material_design_icons'
